# doctown-builder

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  handler.py  localdoc-main.docpack  requirements.txt
src/: docpack.rs  generator.rs  main.rs  s3.rs  serverless.rs  vllm.rs
src/graph/: builder.rs  mod.rs  resolver.rs
src/pipeline/: analyze.rs  cluster.rs  generate.rs  ingest.rs  mod.rs  package.rs  parse.rs
test_samples/: enhanced_resolution_test.rs
