[package]
name = "doctown-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
zip = "6.0.0"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24.2"
tree-sitter-swift = "0.7.1"
tree-sitter-scala = "0.24.0"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25.0"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7.2"
tree-sitter-bash = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1.68"
aws-config = "1.5"
aws-credential-types = "1.2"

[build-dependencies]
cc = "*"
