[package]
name = "doctown-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-dockerfile = "0.2.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.2.0"
tree-sitter-markdown = "0.7.1"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-sql = "0.0.2"
tree-sitter-swift = "0.7.1"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
zip = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hdbscan = "0.11.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
rayon = "1.10"
openai = "1.1.1"
tokio = { version = "1.42", features = ["full"] }
dotenv = "0.15"
ort = "2.0.0-rc.10"
tokenizers = "0.20"
ndarray = "0.16"
futures = "0.3.31"
